--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^1.5.3",
     "gatsby": "^2.18.12",
     "gatsby-plugin-emotion": "^4.1.18",
+    "gatsby-plugin-layout": "^1.1.21",
     "gatsby-plugin-mdx": "^1.0.67",
     "gatsby-source-filesystem": "^2.1.46",
     "react": "^16.12.0",
